CREATE TABLE users (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    username VARCHAR(64) NOT NULL,
    password_hash VARCHAR(255) NOT NULL,
    email VARCHAR(128),
    role VARCHAR(16) NOT NULL,
    enabled BOOLEAN NOT NULL,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL,
    CONSTRAINT uk_users_username UNIQUE (username),
    CONSTRAINT uk_users_email UNIQUE (email)
);

CREATE TABLE manufacturers (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    name VARCHAR(120) NOT NULL,
    country VARCHAR(80),
    website_url VARCHAR(500),
    version BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT uk_manufacturers_name UNIQUE (name)
);

CREATE TABLE applications (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(64) NOT NULL,
    name VARCHAR(160) NOT NULL,
    CONSTRAINT uk_applications_code UNIQUE (code)
);

CREATE TABLE materials (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    code VARCHAR(64) NOT NULL,
    name VARCHAR(160) NOT NULL,
    CONSTRAINT uk_materials_code UNIQUE (code)
);

CREATE TABLE heat_exchangers (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    manufacturer_id BIGINT NOT NULL,
    slug VARCHAR(160) NOT NULL,
    family VARCHAR(32) NOT NULL,
    model VARCHAR(160) NOT NULL,
    series_name VARCHAR(160),
    granularity VARCHAR(32) NOT NULL,
    status VARCHAR(16) NOT NULL,
    summary TEXT,
    surface_area_m2 NUMERIC(14, 3),
    flow_min_m3h NUMERIC(14, 3),
    flow_max_m3h NUMERIC(14, 3),
    power_min_kw NUMERIC(14, 3),
    power_max_kw NUMERIC(14, 3),
    temperature_min_c NUMERIC(10, 2),
    temperature_max_c NUMERIC(10, 2),
    pressure_min_bar NUMERIC(10, 2),
    pressure_max_bar NUMERIC(10, 2),
    width_mm NUMERIC(12, 2),
    height_mm NUMERIC(12, 2),
    depth_mm NUMERIC(12, 2),
    mass_kg NUMERIC(14, 3),
    version BIGINT NOT NULL DEFAULT 0,
    CONSTRAINT uk_heat_exchangers_slug UNIQUE (slug),
    CONSTRAINT fk_heat_exchangers_manufacturer FOREIGN KEY (manufacturer_id) REFERENCES manufacturers(id)
);

CREATE INDEX idx_heat_exchangers_status_family ON heat_exchangers(status, family);
CREATE INDEX idx_heat_exchangers_manufacturer ON heat_exchangers(manufacturer_id);

CREATE TABLE heat_exchanger_applications (
    heat_exchanger_id BIGINT NOT NULL,
    application_id BIGINT NOT NULL,
    PRIMARY KEY (heat_exchanger_id, application_id),
    CONSTRAINT fk_he_applications_exchanger FOREIGN KEY (heat_exchanger_id) REFERENCES heat_exchangers(id) ON DELETE CASCADE,
    CONSTRAINT fk_he_applications_application FOREIGN KEY (application_id) REFERENCES applications(id)
);

CREATE TABLE heat_exchanger_materials (
    heat_exchanger_id BIGINT NOT NULL,
    material_id BIGINT NOT NULL,
    PRIMARY KEY (heat_exchanger_id, material_id),
    CONSTRAINT fk_he_materials_exchanger FOREIGN KEY (heat_exchanger_id) REFERENCES heat_exchangers(id) ON DELETE CASCADE,
    CONSTRAINT fk_he_materials_material FOREIGN KEY (material_id) REFERENCES materials(id)
);

CREATE TABLE heat_exchanger_facts (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    heat_exchanger_id BIGINT NOT NULL,
    fact_key VARCHAR(80) NOT NULL,
    label VARCHAR(160) NOT NULL,
    fact_value VARCHAR(1000) NOT NULL,
    unit VARCHAR(40),
    sort_order INTEGER NOT NULL,
    CONSTRAINT fk_he_facts_exchanger FOREIGN KEY (heat_exchanger_id) REFERENCES heat_exchangers(id) ON DELETE CASCADE
);

CREATE INDEX idx_he_facts_exchanger ON heat_exchanger_facts(heat_exchanger_id);

CREATE TABLE heat_exchanger_sources (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    heat_exchanger_id BIGINT NOT NULL,
    title VARCHAR(240) NOT NULL,
    url VARCHAR(1000) NOT NULL,
    checked_on DATE NOT NULL,
    measurement_basis VARCHAR(1000) NOT NULL,
    CONSTRAINT fk_he_sources_exchanger FOREIGN KEY (heat_exchanger_id) REFERENCES heat_exchangers(id) ON DELETE CASCADE
);

CREATE INDEX idx_he_sources_exchanger ON heat_exchanger_sources(heat_exchanger_id);

CREATE TABLE heat_exchanger_pressure_limits (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    heat_exchanger_id BIGINT NOT NULL,
    temperature_c NUMERIC(10, 2) NOT NULL,
    max_pressure_bar NUMERIC(10, 2) NOT NULL,
    note VARCHAR(500),
    CONSTRAINT fk_he_pressure_exchanger FOREIGN KEY (heat_exchanger_id) REFERENCES heat_exchangers(id) ON DELETE CASCADE
);

CREATE INDEX idx_he_pressure_exchanger ON heat_exchanger_pressure_limits(heat_exchanger_id);
